app/assets/stylesheets/dashboards.css.scss
/* ... */
.dashboard_settings {
  position: absolute;
  top: 33px;
  width: 275px;
  z-index: 1000;
}

.fullscreen_title {
  position: absolute;
  z-index: 1051;
  top: 0;
  left: 10px;
}

.fullscreen {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1050; // Bootstrap's navbar is at 1030.
  background-color: #FFFFFF;
  padding: 3px;
}

.fullscreen_title_bump {
  padding-top: 60px;
}

.modal_overlay {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1050; // Bootstrap's navbar is at 1030.
  padding: 3px;
  background-color: #555555;
  opacity: 0.4;
}

.widget_wrapper {
  background-color: $light-secondary-background;
  border: none;
  padding: 5px;
  position: relative;
  width: 100%;
}

.widget_column {
  padding-right: 5px;
  padding-left: 5px;
}

.widget_title {
  border: none;
  border-bottom: 1px dotted green;
  cursor: move;
  // This was added to hide overly long titles, but it also hides the error
  // reporting, so for now it is commented out.
  // overflow: hidden;
  position: relative;
  white-space: nowrap;
}

.graph_ajax_status {
  font-weight: normal;
}

.graph_control_tabbar {
  position: absolute;
  right: 0;
  z-index: 1000;
}

.graph_config_menu {
  position: absolute;
  bottom: 5px;
  right: 5px;
  & .btn {
    border-radius: 0;
    background-color: inherit;
    border: none;
    color: #666;
    &:hover {
      color: #428bca;
    }
  }
  & .btn_active {
    color: #428bca;
  }
}

.btn_active {
  color: #428bca;
}

.legend_buttons {
  position: absolute;
  z-index: 50;
  right: 0;
  top: 41px;
  padding: 5px;
  & .btn:first-child:not(:last-child) {
    border-radius: 0;
  }
  & .btn:last-child:not(:first-child) {
    border-radius: 0;
  }
}

.graph_control_tabpane {
  position: absolute;
  right: 0;
  top: -1px;
  width: 500px;
}

// Fix spacing issues with Entypo icons inside Bootstrap buttons.
[class^="icon-"][class^="icon-"], [class*=" icon-"] {
  width: auto !important;
  margin-right: 0 !important;
  line-height: 1;
}

.sortable-widgets {
  list-style-type: none;
  padding: 10px;
}

.frame_iframe {
  border-style: none;
  height: 100%;
  overflow: hidden;
  width: 100%;
}

.single_widget .panel {
  margin-bottom: 0;
}

.rickshaw_graph .y_ticks path {
  stroke: none;
}

.rickshaw_legend {
  background: none;
  border-color: #DDDDDD;
  border-radius: 0;
  color: #555555;
  font-size: 10px;
  margin: 3px 0 0 5px;
  padding: 0;
  width: 100%;
  ul {
    margin: 0;
  }
  .action, .action:hover {
    color: #428BCA;
    opacity: 1;
  }
  .line {
    display: inline-block;
    white-space: nowrap;
  }
}

.inactive_widget {
  position: absolute;
  visibility: hidden;
}

// Hover-detail styling.
.rickshaw_graph .detail {
  .date {
    color: #a0a0a0;
  }

  .labels_table {
    margin-top: 2px;
    font-size: 11px;
    th, td {
      padding: 0;
    }
    th {
      padding-right: 7px;
    }
  }
}

$light-background: #f5f5f5;
$light-border: #dddddd;
$light-text: #333333;

error-message {
  position: absolute;
  left: 0;
  top: 5px;
  width: 100%;

  .errors {
    text-align: left;
    position: absolute;
    padding: 10px;
    width: 100%;

    .error {
      overflow: hidden;
      position: absolute;
      z-index: 9999;
      border-top: 1px solid $light-border;
      border-bottom: 1px solid $light-border;
      background-color: #FFFFFF;
      padding: 10px;
      margin-top: 10px;
      left: 0;
      width: 100%;
    }
    .tooltips {
      left: -6px;
      z-index: 1;
      -webkit-animation: flashing 1s ease 1s infinite;
      -moz-animation: flashing 1s ease 1s infinite;
      animation: flashing 1s ease 1s infinite;
    }
  }
}

.bootstrap-datetimepicker-widget {
  thead tr:first-child th:hover,
  td.day:hover,
  td.hour:hover,
  td.minute:hover,
  td.second:hover {
    border-radius: 0;
  }
  td.active.active {
    border-radius: 0;
    background-image: linear-gradient(rgb(0, 68, 204), rgb(0, 68, 204));
  }
}

.dropdown-menu {
  border-radius: 0;
  border: none;
}

.rickshaw_graph .detail .item {
  border-radius: 0;
}

.template_variables {
  margin: 10px 0 20px;
}

.rickshaw_annotation_timeline {
  height: 0;
  border-top: none;
  margin-top: 0;
  position: relative;
}

.rickshaw_annotation_timeline .annotation {
  background-color: #333;
  top: 0;
  width: 2px;
  z-index: 1;
}

.dropdown-menu > li > span {
  display: block;
  padding: 3px 20px;
  clear: both;
  font-weight: normal;
  line-height: 1.428571429;
  color: #333333;
  white-space: nowrap;
}
/* ... */

